# azuki.nvim

./: .luacheckrc  AGENTS.md  DESIGN.md  README.md
.github/workflows/: lua.yml  rust.yml
lua/azuki/: config.lua  handler.lua  init.lua  input.lua  keymap.lua  romaji.lua  server.lua  state.lua  ui.lua
scripts/: setup.sh
server/: Cargo.toml
server/src/: config.rs  converter.rs  dictionary.rs  handler.rs  main.rs  message.rs  protocol.rs  zenzai.rs
server/tests/fixtures/: test-dict.utf8
tests/: phase1_spec.lua  segment_spec.lua
