[package]
name = "azuki-server"
version = "0.1.0"
edition = "2021"
description = "Japanese input conversion server for azuki.nvim"
license = "MIT"

[features]
default = []
zenzai = ["llama-cpp-2"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"

# Optional: Zenzai neural kana-kanji conversion
llama-cpp-2 = { version = "0.1", optional = true }

[profile.release]
lto = true
strip = true
